--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   <body>
 	<h1>Odin Recipes</h1>
     <a href="recipes/alooposto.html">Aloo Posto</a>
+    <div>
+    </div><div>
+    </div>
+    <a href="recipes/pollo.html">Arroz Con Pollo</a>
 </body>
 </html>
