edits to the dinonuggets.html

--- a/recipes/dinonuggets.html
+++ b/recipes/dinonuggets.html
@@ -22,12 +22,12 @@
         </ul>
         <h3>Instructions</h3>
         <ol>
-            <li>Go to the grocery story.</li>
-            <li>Go STRAIGHT to the frozen food section that is clearly labeled, meals and main dishes.</li>
+            <li>Go to the grocery store.</li>
+            <li>Go STRAIGHT to the frozen food aisle that is clearly labeled, meals and main dishes.</li>
             <li>Get the Frozen Dinonuggets</li>
-            <li>Go to the frozen section that is clearly labeled for potatoes.</li>
+            <li>Go to the frozen aisle that is clearly labeled for potatoes.</li>
             <li>Grab a bag of crinkle cut fries, the cheapest and biggest bag will do.</li>
-            <li>Head over to your condiement aisle and grab the ketchup</li>
+            <li>Head over to your condiment aisle and grab the ketchup</li>
             <li>Check out, pay, drive home</li>
             <li>Follow the instructions the bags and DO NOT throw the bags away until the dishes are fully cooked and out of the oven.</li>
             <li>Serve the dinonuggets luke warm to avoid tantrums.</li>    
