file corrections have been made

--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<h1 class="Odin">Odin Recipes</h1>
+	<h1 id="header">Odin Recipes</h1>
+  <h2 id="intro">The Bhattacharya's Favorite Meals</h2>
+  <ul id="links">
     <a href="recipes/alooposto.html">Aloo Posto</a>
     <div>
     </div>
     <a href="recipes/pollo.html">Arroz Con Pollo</a>
     <div></div>
     <a href="recipes/dinonuggets.html">Chicken Nuggets and French Fries</a>
-</body>
+  </ul>
+   </body>
 </html>
