--- a/recipes/alooposto.html
+++ b/recipes/alooposto.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aloo Posto</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
-  <body>
-	<h1>Aloo Posto</h1>
+  <body id="body">
+	<h1 id="header">Aloo Posto</h1>
+    <div class="image">
     <img src="../images/posto.jpg" width="310" height="310">
+</div>
     <h2>Aloo Posto Recipe</h2>
         <p> This is a Bengali dish that I learned and
             perfected since marrying my husband. This is one of his 
