css completed on aloo posto

--- a/recipes/alooposto.html
+++ b/recipes/alooposto.html
@@ -12,20 +12,20 @@
     <div class="image">
     <img src="../images/posto.jpg" width="310" height="310">
 </div>
-    <h2>Aloo Posto Recipe</h2>
-        <p> This is a Bengali dish that I learned and
+    <h2 id="title">Aloo Posto Recipe</h2>
+        <p class="read"> This is a Bengali dish that I learned and
             perfected since marrying my husband. This is one of his 
             favorite dishes to eat when feeling homesick.
             It's always an honor to serve some comfort in a bowl
             with homemade naan on the side.
         </p>
-        <p> With food comes language, here you'll learn that Aloo 
+        <p class="read"> With food comes language, here you'll learn that Aloo 
             in Bangla means potato, a very important vegetable 
             in my life, and posto means white poppy seed. 
             That's exactly what this recipe entails. 
             Simple and delicious.
         </p>
-        <h3>Ingredients</h3>
+        <h3 class="in">Ingredients</h3>
         <ul>    <li>2 tablespoons posto (white poppy seeds)</li>
                 <li>1/4 cup water (for soaking the posto)</li>
                 <li>1 green chilli (optional, if you enjoy spice!)</li>
@@ -38,8 +38,8 @@
                 <li>1/2 to 2/3 cups of water or add as needed</li>
                 <li>1/4 teaspoon sugar (optional)</li>
         </ul>
-        <h3>Instructions</h3>
-        <h4>Making Poppy Seeds Paste</h4>
+        <h3 class="in">Instructions</h3>
+        <h4 class="in">Making Poppy Seeds Paste</h4>
         <ol>
                 <li>Soak the poppy seeds in ¼ cup water for 3 to 4 hours or overnight .
                     If you forget soaking , then soak in lukewarm water for an hour or so.</li>
@@ -48,7 +48,7 @@
                 <li>Add 1 green chili and 1 tablespoon water.</li>
                 <li>Grind to a fine paste. Add more water if needed while grinding the soaked poppy seeds.</li>
         </ol>
-        <h4>Making Aloo Posto</h4>
+        <h4 class="in">Making Aloo Posto</h4>
         <ol>
                 <li>Next rinse, peel, and cut the potatoes into pieces measuring 1 to 1.25 inches.</li>
                 <li>Heat mustard oil in a pan or kadai (wok) and let it gently smoke on a medium heat.</li>
