adding the Arroz Con Pollo stylesheet changes

--- a/recipes/pollo.html
+++ b/recipes/pollo.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arroz Con Pollo</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-	<h1>Arroz Con Pollo</h1>
+	<h1 id="polloheader">Arroz Con Pollo</h1>
+  <div id="polloimg">
     <img src="../images/pollo.jpg" width="310" height="310">
-        <h2>Arroz Con Pollo Recipe</h2>
-             <p>Arroz Con Pollo is a dish that tastes like home to me. Growing up, this dish 
+  </div>
+        <h2 id="pollo">Arroz Con Pollo Recipe</h2>
+             <p class="p">Arroz Con Pollo is a dish that tastes like home to me. Growing up, this dish 
                 was cooked pretty frequently. This dish is simple and 
                  delicious and a recipe that was handed to my sister and me
                  when we left our parent's house for the first time. This was 
@@ -18,11 +21,11 @@
                 I would say that this is a family recipe but it's truly not,
                 It is the recipe on the back of the Fiesta Spanish Rice 
                 Spice shaker, this does not make it any less delicious.</p>
-            <p>With food comes language, in spanish, arroz tranlates 
+            <p class="p">With food comes language, in spanish, arroz tranlates 
                 to rice and pollo tranlates to spanish. This dish being 
                 chicken and rice, simple and delicious.</p>
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="h">Ingredients</h3>
+        <ul class="list">
             <li>1 Tablespoon of cooking oil</li>
             <li>1 Cup of uncooked rice</li>
             <li>1 7oz can of Tomato Sauce</li>
@@ -30,8 +33,8 @@
             <li> 2 cups of water</li>
             <li>1 lb of bone in chicken thighs</li>
            
-        <h3>Instructions</h3>
-        <ol>
+        <h3 class="h">Instructions</h3>
+        <ol class="list">
             <li>Heat the oil in a pan with a tight fitting lid.</li>
             <li>Place chicken thighs, skin down, in the hot oil and allow to brown and cook slightly.</li>
             <li>Remove the chicken thighs and set aside.</li>
@@ -39,7 +42,7 @@
             <li>Stir the tomato sauce, Spanish Rice Seasoning, water and add the browned chicken, pushing the chicken under the water to be mostly submerged, and bring to a boil.</li>
             <li>Cover with a tight fitting lid and simmer on low heat for 20-30 minutes, until the water is absorbed and chicken is fully cooked.</li>
         </ol>
-         <p>Serve on its on or with a side of sweet, crispy corn and fried potatoes.</p>
+         <p class="p">Serve on its on or with a side of sweet, crispy corn and fried potatoes.</p>
         </ul>
 </body>
 </html>
