adding style sheet for dinonuggets

--- a/recipes/dinonuggets.html
+++ b/recipes/dinonuggets.html
@@ -4,23 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Nuggets and French Fries</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
-  <body>
-    <h1>Dinonuggets and French Fries</h1>
+  <body class="text">
+    <h1 id="DINO">Dinonuggets and French Fries</h1>
+    <div id="dinoimg">
     <img src="../images/dino.jpeg" height="310" width="310">
-    <h2>Dinonuggets and French Fries Secret Recipe</h2>
-    <p>This recipe is near and dear to my three old son. 
+  </div>
+    <h2 id="recipeDino">Dinonuggets and French Fries Secret Recipe</h2>
+    <p id="dinoheader">This recipe is near and dear to my three old son. 
         Anytime I ask him what he wants for dinner, this is what 
         he says. Sometimes even for breakfast this is what he 
         wants. Simple and delicious.</p>
-        <h3>Ingredients</h3>
+        <h3 class="nuggets">Ingredients</h3>
         <ul>
             <li>Frozen dinonuggets from the supermarket</li>
             <li>Frozen fries, crinkle cut or curly is prefered</li>
             <li>Ketchup</li>
             <li>spray cooking oil, for ease and convience</li>
         </ul>
-        <h3>Instructions</h3>
+        <h3 class="nuggets">Instructions</h3>
         <ol>
             <li>Go to the grocery store.</li>
             <li>Go STRAIGHT to the frozen food aisle that is clearly labeled, meals and main dishes.</li>
@@ -32,6 +35,6 @@
             <li>Follow the instructions the bags and DO NOT throw the bags away until the dishes are fully cooked and out of the oven.</li>
             <li>Serve the dinonuggets luke warm to avoid tantrums.</li>    
             </ol>
-            <p>This meal is toddler approved, proceed with caution.</p>
+            <p class="chicken">!!This meal is toddler approved, proceed with caution!!</p>
 </body>
 </html>
