added some buttons and styles to the index page

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<h1 id="header">Odin Recipes</h1>
   <h2 id="intro">The Bhattacharya's Favorite Meals</h2>
   <ul id="links">
-    <a href="recipes/alooposto.html">Aloo Posto</a>
+    <button id="a"class="button" onclick="window.location.href='recipes/alooposto.html';">Aloo Posto</button>
     <div>
     </div>
-    <a href="recipes/pollo.html">Arroz Con Pollo</a>
+    <button id="b" class="button" onclick="window.location.href='recipes/pollo.html';">Arroz Con Pollo</button>
     <div></div>
-    <a href="recipes/dinonuggets.html">Chicken Nuggets and French Fries</a>
+    <button id="c" class="button" onclick="window.location.href='recipes/dinonuggets.html';">Chicken Nuggets and French Fries</button>
   </ul>
    </body>
 </html>
