fixed title and buttons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<h1 id="header">Odin Recipes</h1>
+	<h1 id="header">The Bhattacharya's Favorite Meals</h1>
   <h2 id="intro">The Bhattacharya's Favorite Meals</h2>
   <ul id="links">
     <button id="a"class="button" onclick="window.location.href='recipes/alooposto.html';">Aloo Posto</button>
