--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Kirsten's Recipes</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<h1 id="header">The Bhattacharya's Favorite Meals</h1>
-  <h2 id="intro">The Bhattacharya's Favorite Meals</h2>
+	<h1 id="header">Kirsten's Recipe Book</h1>
+  <h2 id="intro">Family Favorite Meals</h2>
   <ul id="links">
     <button id="a"class="button" onclick="window.location.href='recipes/alooposto.html';">Aloo Posto</button>
     <div>
