--- a/recipes/alooposto.html
+++ b/recipes/alooposto.html
@@ -12,7 +12,7 @@
     <div class="image">
     <img src="../images/posto.jpg" width="310" height="310">
 </div>
-    <h2 id="title">Aloo Posto Recipe</h2>
+    <h2 id="title">My Aloo Posto Story</h2>
         <p class="read"> This is a Bengali dish that I learned and
             perfected since marrying my husband. This is one of his 
             favorite dishes to eat when feeling homesick.
@@ -25,6 +25,7 @@
             That's exactly what this recipe entails. 
             Simple and delicious.
         </p>
+        <div id="list">
         <h3 class="in">Ingredients</h3>
         <ul>    <li>2 tablespoons posto (white poppy seeds)</li>
                 <li>1/4 cup water (for soaking the posto)</li>
@@ -68,6 +69,6 @@
                 <li>Cover the pan with a lid and on a low heat simmer till all the water dries up and the potatoes are cooked. The poppy seeds paste will also cook by then. Do not over cook the potatoes. DO check a couple of times when the potatoes are cooking.</li>
                 <li>The consistency should be dry and there should be no water in the pan. The poppy seeds paste will coat the potatoes.</li>
                 <li>While serving you can place some fresh green chillies if want it as a garnish or serve aloo posto as is with some naan.</li>
-            </ol>
+            </ol></div>
   </body>
 </html> 
