--- a/recipes/dinonuggets.html
+++ b/recipes/dinonuggets.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body class="text">
-    <h1 id="DINO">Dinonuggets and French Fries</h1>
+    <h1 id="DINO">Dino-Nuggets and French Fries</h1>
     <div id="dinoimg">
     <img src="../images/dino.jpeg" height="310" width="310">
   </div>
-    <h2 id="recipeDino">Dinonuggets and French Fries Secret Recipe</h2>
+    <h2 id="recipeDino">Dino-Nuggets and French Fries Secret Recipe</h2>
     <p id="dinoheader">This recipe is near and dear to my three old son. 
         Anytime I ask him what he wants for dinner, this is what 
         he says. Sometimes even for breakfast this is what he 
