--- a/recipes/pollo.html
+++ b/recipes/pollo.html
@@ -6,12 +6,13 @@
     <title>Arroz Con Pollo</title>
     <link rel="stylesheet" href="../style.css">
   </head>
-  <body>
-	<h1 id="polloheader">Arroz Con Pollo</h1>
-  <div id="polloimg">
+  <body id="Pbody">
+	<h1 id="Pheader" class="center">Arroz Con Pollo</h1>
+  <div id="PolImg" class="center">
     <img src="../images/pollo.jpg" width="310" height="310">
   </div>
-        <h2 id="pollo">Arroz Con Pollo Recipe</h2>
+        <h2 id="pollo" class="center">My Arroz Con Pollo Story</h2>
+        <div id="margins">
              <p class="p">Arroz Con Pollo is a dish that tastes like home to me. Growing up, this dish 
                 was cooked pretty frequently. This dish is simple and 
                  delicious and a recipe that was handed to my sister and me
@@ -24,14 +25,14 @@
             <p class="p">With food comes language, in spanish, arroz tranlates 
                 to rice and pollo tranlates to spanish. This dish being 
                 chicken and rice, simple and delicious.</p>
-        <h3 class="h">Ingredients</h3>
+        <h3 id="pIng">Ingredients</h3>
         <ul class="list">
             <li>1 Tablespoon of cooking oil</li>
             <li>1 Cup of uncooked rice</li>
             <li>1 7oz can of Tomato Sauce</li>
             <li>1 level Tablesppon of Boiner's Fiesta Brand Spanish Rice Seasoning</li>
             <li> 2 cups of water</li>
-            <li>1 lb of bone in chicken thighs</li>
+            <li>1 lb of bone in chicken thighs</li></div>
            
         <h3 class="h">Instructions</h3>
         <ol class="list">
@@ -44,5 +45,6 @@
         </ol>
          <p class="p">Serve on its on or with a side of sweet, crispy corn and fried potatoes.</p>
         </ul>
+    
 </body>
 </html>
