experiementing with flexbox, trying to get my buttons to center

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 	<h1 id="header">Kirsten's Recipe Book</h1>
   <h2 id="intro">Family Favorite Meals</h2>
   <ul id="links">
+    <div id="buttons">
     <button id="a"class="button" onclick="window.location.href='recipes/alooposto.html';">Aloo Posto</button>
     <div>
     </div>
     <button id="b" class="button" onclick="window.location.href='recipes/pollo.html';">Arroz Con Pollo</button>
     <div></div>
     <button id="c" class="button" onclick="window.location.href='recipes/dinonuggets.html';">Chicken Nuggets and French Fries</button>
-  </ul>
+    </div></ul>
    </body>
 </html>
