fixed the flex box items on the sty le sheet for the index page. added a flex box to the aloo posto page, my story paragra ph. added a back buttom to the aloo posto html page.

--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<h1 id="header">Kirsten's Recipe Book</h1>
+
+    <div class="header">
+	<h1 id="header">Kirsten's Recipes</h1>
   <h2 id="intro">Family Favorite Meals</h2>
+    </div>
+
+  <div class="container">
   <ul id="links">
-    <div id="buttons">
-    <button id="a"class="button" onclick="window.location.href='recipes/alooposto.html';">Aloo Posto</button>
+    <button class="button" onclick="window.location.href='recipes/alooposto.html';">Aloo Posto</button>
     <div>
     </div>
-    <button id="b" class="button" onclick="window.location.href='recipes/pollo.html';">Arroz Con Pollo</button>
+    <button class="button" onclick="window.location.href='recipes/pollo.html';">Arroz Con Pollo</button>
     <div></div>
-    <button id="c" class="button" onclick="window.location.href='recipes/dinonuggets.html';">Chicken Nuggets and French Fries</button>
-    </div></ul>
+    <button  class="button" onclick="window.location.href='recipes/dinonuggets.html';">Chicken Nuggets and French Fries</button>
+    </ul>
+  </div>
+
    </body>
 </html>
