--- a/recipes/alooposto.html
+++ b/recipes/alooposto.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body id="body">
+    <a href="../index.html">back</a>
 	<h1 id="header">Aloo Posto</h1>
     <div class="image">
     <img src="../images/posto.jpg" width="310" height="310">
 </div>
+
+<div class="mother">
     <h2 id="title">My Aloo Posto Story</h2>
         <p class="read"> This is a Bengali dish that I learned and
             perfected since marrying my husband. This is one of his 
@@ -25,6 +28,8 @@
             That's exactly what this recipe entails. 
             Simple and delicious.
         </p>
+        </div>
+
         <div id="list">
         <h3 class="in">Ingredients</h3>
         <ul>    <li>2 tablespoons posto (white poppy seeds)</li>
