corrected the buttons on the homepage so that they can be aligned-centered. Fixed the Home Button on the Aloo Posto page and added it it the Arroz Con Pollo Page.

--- a/recipes/alooposto.html
+++ b/recipes/alooposto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body id="body">
-    <a href="../index.html">back</a>
+    <a href="../index.html" id="back">Home Page</a>
 	<h1 id="header">Aloo Posto</h1>
     <div class="image">
     <img src="../images/posto.jpg" width="310" height="310">
