--- a/recipes/dinonuggets.html
+++ b/recipes/dinonuggets.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body class="text">
+    <a href="../index.html" id="Home">Home Page</a>
     <h1 id="DINO">Dino-Nuggets and French Fries</h1>
     <div id="dinoimg">
     <img src="../images/dino.jpeg" height="310" width="310">
