put an image for thr background. Added a home icon to each of the recipe pages and adjusted the phone colors so that they are readable.

--- a/recipes/alooposto.html
+++ b/recipes/alooposto.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body id="body">
-    <a href="../index.html" id="back">Home Page</a>
+    <a href="../index.html"><img src="../images/home.PNG" alt="Icon" id="back"></a>
+
 	<h1 id="header">Aloo Posto</h1>
     <div class="image">
     <img src="../images/posto.jpg" width="310" height="310">
