--- a/recipes/pollo.html
+++ b/recipes/pollo.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-  <a href="../index.html" id="Home">Home Page</a>
+    <a href="../index.html"><img src="../images/home.PNG" alt="Icon" id="back"></a>
 	<h1 class="center" id="top">Arroz Con Pollo</h1>
   <div class="center">
     <img src="../images/pollo.jpg" width="310" height="310">
