--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="header">
 	<h1 id="header">Kirsten's Recipes</h1>
-  <h2 id="intro">Family Favorite Meals</h2>
+  <h2 id="intro">Quick and Delicious Meals</h2>
     </div>
 
   <div class="container">
