--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+<div class="textbox">
     <div class="header">
 	<h1 id="header">Kirsten's Recipes</h1>
   <h2 id="intro">Quick and Delicious Meals</h2>
@@ -18,6 +18,6 @@
     <button class="button" onclick="window.location.href='recipes/pollo.html';">Arroz Con Pollo</button>
     <button  class="button" onclick="window.location.href='recipes/dinonuggets.html';">Chicken Nuggets and French Fries</button>
   </div>
-
+</div>
    </body>
 </html>
