--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Kirsten's Recipes</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="background">
 <div class="textbox">
     <div class="header">
-	<h1 id="header">Kirsten's Recipes</h1>
-  <h2 id="intro">Quick and Delicious Meals</h2>
+	<h1 class="header">Kirsten's Recipes</h1>
+  <h2 class="header">Quick and Delicious Meals</h2>
     </div>
 
   <div class="container">
