made the alooposto paage better to read and the image rounded

--- a/recipes/alooposto.html
+++ b/recipes/alooposto.html
@@ -12,7 +12,7 @@
 
 	<h1 id="header">Aloo Posto</h1>
     <div class="image">
-    <img src="../images/posto.jpg" width="310" height="310">
+    <img src="../images/posto.jpg" width="310" height="310" class="image">
 </div>
 
 <div class="mother">
