addjust the arroz con pollo page

--- a/recipes/pollo.html
+++ b/recipes/pollo.html
@@ -11,7 +11,7 @@
     <a href="../index.html"><img src="../images/home.PNG" alt="Icon" id="back"></a>
 	<h1 class="center" id="top">Arroz Con Pollo</h1>
   <div class="center">
-    <img src="../images/pollo.jpg" width="310" height="310">
+    <img src="../images/pollo.jpg" width="310" height="310" class="image">
   </div>
   <div id="Father"></div>
         <h2 class="center">My Arroz Con Pollo Story</h2>
@@ -30,7 +30,7 @@
                 to rice and pollo tranlates to spanish. This dish being 
                 chicken and rice, simple and delicious.</p>
         <h3 class="start">Ingredients</h3>
-        <ul>
+        <ul class="start">
             <li>1 Tablespoon of cooking oil</li>
             <li>1 Cup of uncooked rice</li>
             <li>1 7oz can of Tomato Sauce</li>
@@ -39,7 +39,7 @@
             <li>1 lb of bone in chicken thighs</li></div>
            
         <h3 class="start">Instructions</h3>
-        <ol>
+        <ol class="start">
             <li>Heat the oil in a pan with a tight fitting lid.</li>
             <li>Place chicken thighs, skin down, in the hot oil and allow to brown and cook slightly.</li>
             <li>Remove the chicken thighs and set aside.</li>
