--- a/recipes/dinonuggets.html
+++ b/recipes/dinonuggets.html
@@ -10,7 +10,7 @@
     <a href="../index.html"><img src="../images/home.PNG" alt="Icon" id="back"></a>
     <h1 id="DINO">Dino-Nuggets and French Fries</h1>
     <div id="dinoimg">
-    <img src="../images/dino.jpeg" height="310" width="310">
+    <img src="../images/dino.jpeg" height="310" width="310" class="dino">
   </div>
     <h2 id="recipeDino">Dino-Nuggets and French Fries Secret Recipe</h2>
     <p id="dinoheader">This recipe is near and dear to my three old son. 
@@ -18,14 +18,14 @@
         he says. Sometimes even for breakfast this is what he 
         wants. Simple and delicious.</p>
         <h3 class="nuggets">Ingredients</h3>
-        <ul>
+        <ul class="frozen">
             <li>Frozen dinonuggets from the supermarket</li>
             <li>Frozen fries, crinkle cut or curly is prefered</li>
             <li>Ketchup</li>
             <li>spray cooking oil, for ease and convience</li>
         </ul>
         <h3 class="nuggets">Instructions</h3>
-        <ol>
+        <ol class="store">
             <li>Go to the grocery store.</li>
             <li>Go STRAIGHT to the frozen food aisle that is clearly labeled, meals and main dishes.</li>
             <li>Get the Frozen Dinonuggets</li>
